<resources>
    <string name="app_name">LifeStreamer Multitool</string>
    <string name="action_settings">Settings</string>
    <string name="action_rtmp_help">How to use RTMP as source</string>
    <string name="action_srt_help">How to use SRT as source</string>
    <string name="action_uvc_help">How to use USB source</string>
    <string name="action_faq">FAQ</string>
    <string name="action_known_issues">Known issues and workarounds</string>
    <string name="menu_actions">Menu actions</string>
    <string name="streaming_channel_name">Camera Streaming</string>
    <string name="streaming_channel_description">Notification channel for camera streaming service</string>
    <string name="service_notification_title">LifeStreamer Multitool</string>
    <string name="service_notification_text_created">Service created</string>
    <string name="status_not_streaming">Not streaming</string>
    <string name="status_starting">Starting...</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_streaming">Live</string>
    <string name="status_error">Error</string>
    <string name="audio_source_microphone">Microphone</string>
    <string name="audio_source_rtmp">Media Projection Audio</string>
    <string name="audio_source_none">No Audio</string>
    <string name="service_notification_action_mute">Mute</string>
    <string name="service_notification_action_unmute">Unmute</string>
    <string name="service_notification_action_exit">Quit</string>
    <string name="live">Start Live</string>
    <string name="stop">Stop</string>
    <string name="permission">Permission</string>
    <string name="permission_not_granted">To function properly, StreamPack needs your permission.</string>
    <string name="switch_camera_source">Switch camera source</string>
    <string name="turn_on_off_torch">Turn on/off torch</string>
    <string name="set_white_balance">Set white balance</string>
    <string name="set_exposure_compensation">Set exposure compensation</string>
    <string name="set_zoom_ratio">Set zoom ratio</string>
    <string name="set_auto_focus_mode">Set auto focus mode</string>
    <string name="mute_unmute_microphone">Mute unmute microphone</string>
    <string name="settings">Settings</string>
    <string name="warning">Warning</string>
    <plurals name="camera_frame_rate_not_supported">
        <item quantity="one">Camera %1$s does not support %2$d fps</item>
        <item quantity="other">Cameras %1$s do not support %2$d fps</item>
    </plurals>
    <string name="video">Video</string>
    <string name="video_enable">Enable</string>
    <string name="video_enable_key">video_enabled_key</string>
    <string name="video_settings_key">video_settings_key</string>
    <string name="video_encoder">Encoder</string>
    <string name="video_encoder_key">video_encoder_key</string>
    <string name="default_video_encoder">video/avc</string>
    <string name="video_resolution">Resolution</string>
    <string name="video_resolution_key">video_resolution_key</string>
    <string name="default_video_resolution">1920x1080</string>
    <string name="video_fps">Frames per second</string>
    <string name="video_fps_key">video_fps_key</string>
    <string name="default_fps">30</string>
    <string name="video_bitrate">Bitrate in kbps</string>
    <string name="video_bitrate_key">live_video_bitrate_key</string>
    <string name="default_video_bitrate">1000</string>
    <string name="video_profile">Profile</string>
    <string name="video_profile_key">video_profile_key</string>
    <string name="video_level">Level</string>
    <string name="video_level_key">video_level_key</string>
    <string name="audio">Audio</string>
    <string name="audio_enable">Enable</string>
    <string name="audio_enable_key">audio_enabled_key</string>
    <string name="audio_settings_key">audio_settings_key</string>
    <string name="audio_encoder">Encoder</string>
    <string name="audio_encoder_key">audio_encoder_key</string>
    <string name="default_audio_encoder">audio/mp4a-latm</string>
    <string name="audio_number_of_channels">Number of channels</string>
    <string name="audio_channel_config_key">audio_channel_config_key</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_key">audio_bitrate_key</string>
    <string name="audio_sample_rate">Sample rate in kHz</string>
    <string name="audio_sample_rate_key">audio_sample_rate_key</string>
    <string name="audio_byte_format">Byte format</string>
    <string name="audio_byte_format_key">audio_byte_format_key</string>
    <string name="audio_byte_format_8bit">8 bits</string>
    <string name="audio_byte_format_16bit">16 bits</string>
    <string name="audio_byte_format_float">Float</string>
    <string name="audio_profile">Profile</string>
    <string name="audio_profile_key">audio_profile_key</string>
    <string name="audio_source_type">Audio Source (try VC if USB audio is too loud/noisy)</string>
    <string name="audio_source_type_key">audio_source_type_key</string>
    <string name="endpoint">Endpoint</string>
    <string name="endpoint_type">Type</string>
    <string name="endpoint_type_key">endpoint_type_key_v2</string>
    <string name="to_ts_file">Record TS file</string>
    <string name="to_flv_file">Record FLV file</string>
    <string name="to_srt">Stream SRT</string>
    <string name="to_rtmp">Stream RTMP</string>
    <string name="to_mp4_file">Record MP4 file</string>
    <string name="to_webm_file">Record WebM file</string>
    <string name="to_ogg_file">Record OGG file</string>
    <string name="to_3gp_file">Record 3GP file</string>
    <string name="srt_server">SRT Server</string>
    <string name="srt_server_key">srt_server_key</string>
    <string name="server_ip">Server address or IP (without srt:// prefix)</string>
    <string name="srt_server_ip_key">srt_server_ip_key</string>
    <string name="default_srt_server_url">127.0.0.1</string>
    <string name="server_port">Port</string>
    <string name="srt_server_port_key">srt_server_port_key</string>
    <string name="default_srt_server_port">6000</string>
    <string name="srt_server_stream_id_key">server_stream_id_key</string>
    <string name="srt_server_stream_id">Stream ID</string>
    <string name="default_srt_server_stream_id" />
    <string name="srt_server_passphrase_key">srt_server_passphrase_key</string>
    <string name="srt_server_passphrase">Passphrase</string>
    <string name="default_srt_server_stream_passphrase" />
    <string name="default_srt_server_passphrase">""</string>
    <string name="srt_server_latency_key">srt_server_latency_key</string>
    <string name="srt_server_latency">Latency (ms)</string>
    <string name="default_srt_server_latency">2000</string>
    <string name="srt_server_enable_bitrate_regulation_key">srt_server_enable_bitrate_regulation_key</string>
    <string name="srt_server_enable_bitrate_regulation">Enable bitrate regulation</string>
    <string name="srt_server_video_target_bitrate_key">srt_server_video_target_bitrate_key</string>
    <string name="srt_server_video_target_bitrate">Video target bitrate (kb/s)</string>
    <string name="srt_server_video_min_bitrate_key">srt_server_video_min_bitrate_key</string>
    <string name="srt_server_video_min_bitrate">Video minimum bitrate (kb/s)</string>
    <string name="srt_server_moblin_regulator_mode_key">srt_server_moblin_regulator_mode_key</string>
    <string name="srt_server_moblin_regulator_mode">Bitrate algorithm</string>
    <string name="srt_server_moblin_regulator_mode_fast">Moblin fast</string>
    <string name="srt_server_moblin_regulator_mode_slow">Moblin slow</string>
    <string name="srt_server_moblin_regulator_mode_belabox">Belabox</string>
    <string name="srt_server_moblin_regulator_mode_value_fast">fast</string>
    <string name="srt_server_moblin_regulator_mode_value_slow">slow</string>
    <string name="srt_server_moblin_regulator_mode_value_belabox">belabox</string>
    <string name="rtmp_server_key">rtmp_server_key</string>
    <string name="rtmp_server">RTMP Server</string>
    <string name="rtmp_server_url_key">rtmp_server_url_key</string>
    <string name="default_rtmp_url">rtmp://localhost:1935/publish/live</string>
    <string name="server_url">URL</string>
    <string name="rtmp_source_category_title">RTMP Video/Audio Source</string>
    <string name="rtmp_source_helper_example">Source URL Beispiel: rtmp://localhost:1935/publish/live3</string>
    <string name="rtmp_source_key">rtmp_source_key</string>
    <string name="rtmp_source_title">RTMP Source 1 URL</string>
    <string name="rtmp_source_url_key">rtmp_source_url_key</string>
    <string name="rtmp_source_default_url">rtmp://localhost:1935/publish/live</string>
    <string name="rtmp_source_2_title">RTMP Source 2 URL</string>
    <string name="rtmp_source_url_2_key">rtmp_source_url_2_key</string>
    <string name="rtmp_source_2_default_url">rtmp://localhost:1935/publish/live1</string>
    <string name="rtmp_source_3_title">RTMP Source 3 URL</string>
    <string name="rtmp_source_url_3_key">rtmp_source_url_3_key</string>
    <string name="rtmp_source_3_default_url" />
    <string name="rtmp_source_4_title">RTMP Source 4 URL</string>
    <string name="rtmp_source_url_4_key">rtmp_source_url_4_key</string>
    <string name="rtmp_source_4_default_url" />
    <string name="rtmp_source_restart_on_disconnect_key">rtmp_source_restart_on_disconnect_key</string>
    <string name="rtmp_source_restart_on_disconnect_title">Restart SRT stream on RTMP source disconnect</string>
    <string name="rtmp_source_restart_on_disconnect_summary">Recommended. Fixes OBS media source playback issues when RTMP source disconnects</string>
    <string name="file_endpoint_key">file_endpoint_key</string>
    <string name="file">File</string>
    <string name="file_name_key">file_name_key</string>
    <string name="file_name">File name</string>
    <string name="default_file_name">StreamPackFile</string>
    <string name="video_encoder_h264">AVC/H.264</string>
    <string name="video_encoder_h265">HEVC/H.265</string>
    <string name="video_encoder_vp9">VP9</string>
    <string name="video_encoder_vp8">VP8</string>
    <string name="video_encoder_av1">AV1</string>
    <string name="video_encoder_h263">H.263</string>
    <string name="audio_encoder_aac">AAC</string>
    <string name="audio_encoder_opus">Opus</string>
    <string name="audio_profile_main">Main</string>
    <string name="audio_profile_lc">Low-Complexity</string>
    <string name="audio_profile_ssr">Scalable Sampling Rate</string>
    <string name="audio_profile_ltp">Long Term Prediction</string>
    <string name="audio_profile_he">High Efficiency</string>
    <string name="audio_profile_scalable">Scalable</string>
    <string name="audio_profile_er_lc">ER LC</string>
    <string name="audio_profile_ld">Low Delay</string>
    <string name="audio_profile_he_ps">High Efficiency v2</string>
    <string name="audio_profile_eld">Enhanced Low Delay</string>
    <string name="audio_profile_er_scalable">ER Scalable</string>
    <string name="audio_profile_xhe">Extended High Efficiency</string>
    <string name="av_profile_unknown">Unknown</string>
    <string name="video_profile_baseline">Baseline</string>
    <string name="video_profile_extended">Extended</string>
    <string name="video_profile_main">Main</string>
    <string name="video_profile_main10">Main10</string>
    <string name="video_profile_main10_hdr10">Main10Hdr10</string>
    <string name="video_profile_main10_hdr10_plus">Main10Hdr10Plus</string>
    <string name="video_profile_main_still">Main Still</string>
    <string name="video_profile_high">High</string>
    <string name="video_profile_high10">High10</string>
    <string name="video_profile_high422">High422</string>
    <string name="video_profile_constrained_baseline">Constrained Baseline</string>
    <string name="video_profile_constrained_high">Constrained High</string>
</resources>