<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="@string/rtmp_source_key"
        app:title="@string/rtmp_source_category_title">

        <Preference
            app:summary="@string/rtmp_source_helper_example"
            app:selectable="false" />

        <EditTextPreference
            app:defaultValue="@string/rtmp_source_default_url"
            app:key="@string/rtmp_source_url_key"
            app:title="@string/rtmp_source_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/rtmp_source_2_default_url"
            app:key="@string/rtmp_source_url_2_key"
            app:title="@string/rtmp_source_2_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/rtmp_source_3_default_url"
            app:key="@string/rtmp_source_url_3_key"
            app:title="@string/rtmp_source_3_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/rtmp_source_4_default_url"
            app:key="@string/rtmp_source_url_4_key"
            app:title="@string/rtmp_source_4_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/rtmp_source_restart_on_disconnect_key"
            app:title="@string/rtmp_source_restart_on_disconnect_title"
            app:summary="@string/rtmp_source_restart_on_disconnect_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/video">

        <PreferenceCategory
            app:key="@string/video_settings_key"
            app:title="@string/settings">

            <ListPreference
                app:defaultValue="@string/default_video_encoder"
                app:key="@string/video_encoder_key"
                app:title="@string/video_encoder"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_video_resolution"
                app:key="@string/video_resolution_key"
                app:title="@string/video_resolution"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_fps"
                app:entries="@array/FpsEntries"
                app:entryValues="@array/FpsEntries"
                app:key="@string/video_fps_key"
                app:title="@string/video_fps"
                app:useSimpleSummaryProvider="true" />

            <SeekBarPreference
                android:max="10000"
                app:defaultValue="@string/default_video_bitrate"
                app:key="@string/video_bitrate_key"
                app:min="500"
                app:showSeekBarValue="true"
                app:title="@string/video_bitrate"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:key="@string/video_profile_key"
                app:title="@string/video_profile"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:key="@string/video_level_key"
                app:title="@string/video_level"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio">

        <!-- Audio is always enabled - toggle disabled -->
        <SwitchPreference
            android:defaultValue="true"
            app:key="@string/audio_enable_key"
            app:title="@string/audio_enable"
            app:enabled="false" />

        <PreferenceCategory
            app:key="@string/audio_settings_key"
            app:title="@string/settings">

            <ListPreference
                app:defaultValue="@string/default_audio_encoder"
                app:key="@string/audio_encoder_key"
                app:title="@string/audio_encoder"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="12"
                app:entries="@array/AudioChannelConfigEntries"
                app:entryValues="@array/AudioChannelConfigEntryValues"
                app:key="@string/audio_channel_config_key"
                app:title="@string/audio_number_of_channels"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="128000"
                app:entryValues="@array/AudioBitrateEntryValues"
                app:key="@string/audio_bitrate_key"
                app:title="@string/audio_bitrate"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="44100"
                app:key="@string/audio_sample_rate_key"
                app:title="@string/audio_sample_rate"
                app:useSimpleSummaryProvider="true" />

            <!-- Byte format locked to 16 bits (other formats are glitchy) -->
            <ListPreference
                app:defaultValue="2"
                app:key="@string/audio_byte_format_key"
                app:title="@string/audio_byte_format"
                app:useSimpleSummaryProvider="true"
                app:enabled="false" />

            <ListPreference
                app:defaultValue="2"
                app:key="@string/audio_profile_key"
                app:title="@string/audio_profile"
                app:useSimpleSummaryProvider="true" />

            <!-- Audio Source Type -->
            <ListPreference
                app:defaultValue="5"
                app:key="@string/audio_source_type_key"
                app:title="@string/audio_source_type"
                app:entries="@array/AudioSourceTypeEntries"
                app:entryValues="@array/AudioSourceTypeEntryValues"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/endpoint">
        <ListPreference
            app:defaultValue="2"
            app:key="@string/endpoint_type_key"
            app:title="@string/endpoint_type"
            app:useSimpleSummaryProvider="true" />

        <PreferenceCategory
            app:key="@string/srt_server_key"
            app:title="@string/srt_server">

            <EditTextPreference
                app:defaultValue="@string/default_srt_server_url"
                app:key="@string/srt_server_ip_key"
                app:title="@string/server_ip"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:defaultValue="@string/default_srt_server_port"
                app:key="@string/srt_server_port_key"
                app:title="@string/server_port"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:defaultValue="@string/default_srt_server_stream_id"
                app:key="@string/srt_server_stream_id_key"
                app:title="@string/srt_server_stream_id"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:defaultValue="@string/default_srt_server_latency"
                app:key="@string/srt_server_latency_key"
                app:title="@string/srt_server_latency"
                app:useSimpleSummaryProvider="true" />

            <EditTextPreference
                app:defaultValue="@string/default_srt_server_passphrase"
                app:key="@string/srt_server_passphrase_key"
                app:title="@string/srt_server_passphrase"
                app:useSimpleSummaryProvider="true" />

            <SwitchPreference
                android:defaultValue="true"
                app:key="@string/srt_server_enable_bitrate_regulation_key"
                app:title="@string/srt_server_enable_bitrate_regulation" />

            <SeekBarPreference
                android:max="10000"
                app:defaultValue="5000"
                app:key="@string/srt_server_video_target_bitrate_key"
                app:min="500"
                app:showSeekBarValue="true"
                app:title="@string/srt_server_video_target_bitrate"
                app:useSimpleSummaryProvider="true" />

            <SeekBarPreference
                android:max="10000"
                app:defaultValue="300"
                app:key="@string/srt_server_video_min_bitrate_key"
                app:min="100"
                app:showSeekBarValue="true"
                app:title="@string/srt_server_video_min_bitrate"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/srt_server_moblin_regulator_mode_value_belabox"
                app:key="@string/srt_server_moblin_regulator_mode_key"
                app:title="@string/srt_server_moblin_regulator_mode"
                app:entries='@array/moblin_regulator_mode_entries'
                app:entryValues='@array/moblin_regulator_mode_values'
                app:useSimpleSummaryProvider="true" />


        </PreferenceCategory>

        <PreferenceCategory
            app:key="@string/rtmp_server_key"
            app:title="@string/rtmp_server">

            <EditTextPreference
                app:defaultValue="@string/default_rtmp_url"
                app:key="@string/rtmp_server_url_key"
                app:title="@string/server_url"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>

        <PreferenceCategory
            app:key="@string/file_endpoint_key"
            app:title="@string/file">

            <EditTextPreference
                app:defaultValue="@string/default_file_name"
                app:key="@string/file_name_key"
                app:title="@string/file_name"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>