<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_rtmp_help"
        android:orderInCategory="101"
        android:title="@string/action_rtmp_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_srt_help"
        android:orderInCategory="102"
        android:title="@string/action_srt_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_uvc_help"
        android:orderInCategory="103"
        android:title="@string/action_uvc_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_known_issues"
        android:orderInCategory="104"
        android:title="@string/action_known_issues"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="105"
        android:title="@string/action_faq"
        app:showAsAction="never" />
</menu>